cmake_minimum_required(VERSION 3.10)

project(ComputerNetworkLab1_SR C)

set(CMAKE_C_STANDARD_REQUIRED ON)

file(GLOB SOURCES "*.c")

# 将可执行文件直接输出到当前源码根目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(datalink ${SOURCES})
